# sectorino

./: Cargo.toml  README.md
examples/: gentab.rs
src/: dedupe.rs  main.rs  rolling.rs
