[package]
name = "sectorino"
version = "0.1.0"
authors = ["Shane Nelson <181157+stgn@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
blake3 = "0.3.5"
num-format = "0.4.0"
hex = "0.4.2"
nohash-hasher = "0.2.0"